src/objects/BMCServiceDesk__BMC_ApplicationInfrastructure__c.object
<CustomObject>
    <description>BMC_ApplicationInfrastructure. CMDB Class that stores information about the framework (such as SAP or J2EE) that supports applications in a distributed or composite system. This class represents the platform to model your applications. For example, you would model SAP as an instance of BMC_ApplicationInfrastructure. Once an application is deployed in that platform, it can run on any application server in the SAP environment. Application infrastructure objects can be discovered and instantiated; however, they do not have any direct relationship to computers. Only applications and software servers have relationships to computers. This class has no corresponding DMTF CIM class.</description>
    <fields>
        <fullName>BMCServiceDesk__Application_Infrastructure_Type__c</fullName>
        <label>Application Infrastructure Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Application Server</fullName>
                </value>
                <value>
                    <fullName>SAP System</fullName>
                </value>
                <value>
                    <fullName>Siebel Enterprise</fullName>
                </value>
                <value>
                    <fullName>Database System</fullName>
                </value>
                <value>
                    <fullName>Clustered Application Server</fullName>
                </value>
                <value>
                    <fullName>Other (default)</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Infrastructure_Instance_Type__c</fullName>
        <label>Infrastructure Instance Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Application Infrastructure</label>
    <nameField>
        <label>Application Infrastructure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Infrastructures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>